--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog</title>
+    <title>Gil's Blog</title>
+    <script>
+      (function(){ var t = localStorage.getItem('gils-blog-theme'); if (t === 'dark') document.documentElement.setAttribute('data-theme', 'dark'); })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
